--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Calculadora IMC</string>
+    <string name="weight_label">Peso:</string>
+    <string name="weight_simbols">Kg</string>
+    <string name="height_label">Altura:</string>
+    <string name="height_simbols">M</string>
+    <string name="btn_calculate_text">CALCULAR</string>
 </resources>
