feat: implement IMC calculator with navigation and UI components

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="btn_calculate_text">CALCULAR</string>
     <string name="ex_weight">Ex: 80,5</string>
     <string name="ex_height">Ex: 120</string>
+    <string name="graphic_legend">Kg/M²</string>
 </resources>
